fix: wrap

--- a/style.css
+++ b/style.css
@@ -440,6 +440,7 @@ h4 {
 .nav ul,
 footer ul {
     display: flex;
+    flex-wrap: wrap;
     gap: 40px;
     list-style: none;
     font-style: normal;
